<resources>
    <string name="app_name">Marketa</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <!-- TODO: Main Activity -->
    <string name="backPressExit">Press Back again to exit</string>
    <string name="main_action_bar">Gallery</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="home_toast">You\'re Already in Home</string>


    <!-- TODO: Login Activity -->
    <string name="ForgPass">Forgot your password?</string>
    <string name="signUp">Not A Member? <u>JOIN NOW</u></string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="passCharLess">Password must be 8 characters at least</string>
    <string name="invalidMail">Invalid E-Mail form</string>
    <string name="loginDataProblem">Invalid Email/Password</string>
    <string name="logInFailed">Failed to log in</string>


    <!-- TODO: Signup Activity -->
    <string name="join">Join Marketa!</string>
    <string name="alreadyMem">Already a Member? <u>Sign in.</u></string>
    <string name="signPass">Create Password</string>
    <string name="userName">Username</string>
    <string name="signUpButton">Sign Up</string>
    <string name="signUpFailed">This Email already exists</string>
    <string name="signUpDataProblem">One or more fields are incorrect</string>
    <string name="invalidForm">Invalid Mail Form</string>
    <string name="invalidUsername">Invalid Username</string>

    <!-- TODO: About Activity -->
    <string name="about_header">Marketa App</string>
    <string name="about_details">The App provides an online entertainment store experience,
        similar to Google Play but targeting only specific entertainment types (Books, Games, and Movies).
        The products will be stored in a firebase real time database and provided to the app dynamically.
        The app will provide the users with a detailed product description and allow them to get a good overview
        before proceeding to any purchase.The users will have the chance to use this application in multiple devices,
        as it will allow them to login via firebase andwill then sync all their data across all of their devices.</string>
    <string name="about_action_bar">About</string>

    <!-- TODO: Credit Activity -->
    <string name="credit_details"><![CDATA[Junior Android developer with +3 years of Apps development \n
     Computer Engineer \n Life-long leaner & builder.]]></string>
    <string name="credit_action_bar">Credit</string>


    <!-- TODO: Checkout Activity -->
    <string name="shopping_cart">Shopping Cart</string>
    <string name="developer_name">Bahaa Ibrahim</string>
    <string name="subtotal">Subtotal:</string>
    <string name="discount">Discount:</string>
    <string name="grand_total">Grand Total:</string>
    <string name="order_now">ORDER NOW!</string>
    <string name="item_removed_toast">Item Removed!</string>
    <string name="del_icon">card delete icon</string>

    <!-- TODO: Book Details Activity -->
    <string name="transition_name">selectedMovie</string>
    <string name="book_summary">Summary:</string>
    <string name="add_book_to_cart">ADD TO CART</string>
    <string name="voucher_off50">OFF50</string>
    <string name="voucher_off25">OFF25</string>
    <string name="snack_invalid">INVALID DATA IN BOTH FIELDS</string>
    <string name="snack_qty">NOT ALLOWED LESS THAN 1 PRODUCT</string>
    <string name="snack_outdate">COUPON MAY BE INVALID OR OUTDATED</string>

    <!-- TODO: Game Fragment -->
    <string name="game_api_url">https://api.myjson.com/bins/11wuyy</string>
    <string name="game_transition">selectedBook</string>


    <!-- TODO: Movie Fragment -->
    <string name="movie_api_url">https://api.myjson.com/bins/lu5my</string>

    <!-- TODO: Book Fragment -->
    <string name="book_api_url">https://api.myjson.com/bins/14cqju</string>


    <!-- TODO: Game Details Activity -->
    <string name="add_game_to_cart">ADD TO CART</string>

    <!-- TODO: Movie Details Activity -->
    <string name="movie_plot">Plot:</string>
    <string name="add_movie_to_cart">ADD TO CART</string>

    <!-- TODO: Book Card -->
    <string name="book_transition">selectedBook</string>

    <!-- TODO: Movie Card -->
    <string name="movie_transition">selectedMovie</string>

    <!-- TODO: Popup Window -->
    <string name="pop_purchasing_info">Purchasing Info</string>
    <string name="pop_qty_txt">Quantity:</string>
    <string name="pop_voucher_txt">Voucher Coupon:</string>
    <string name="pop_proceed">PROCEED TO CHECKOUT</string>
    <string name="popqty_num">1</string>


    <!-- TODO: Splash Screen -->
    <string name="splash_app_name">MARKETA</string>
    <string name="splashbanner_txt">Your Home of Entertainment</string>


    <!-- TODO: App Widget -->
    <string name="appwidget_text">Pick products to show</string>

    <!-- TODO: Navigation Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_credit">Credit</string>
    <string name="menu_logout">Logout</string>



    <string name="logo_image">logo_image</string>
    <string name="movie_cover">Movie cover</string>
    <string name="book_image">Book Image</string>
    <string name="book_card">Book Card</string>
    <string name="game_card">Game card</string>
    <string name="header_image">Header image</string>
    <string name="movie_card_image">Movie card image</string>
    <string name="movie_cover_image">Movie cover image</string>
    <string name="quantity">Quantity</string>
    <string name="voucher">Voucher</string>
    <string name="d_s">$</string>
    <string name="minus"> - </string>
    <string name="prices_str">%1$s $</string>
    <string name="chk_qty_str">( %1$s )</string>
    <string name="book_img_xtra">bookCoverImg</string>
    <string name="book_sum_xtra">bookSummary</string>
    <string name="book_price_xtra">bookPrice</string>
    <string name="book_title_xtra">bookTitle</string>
    <string name="item_list_xtra">itemList</string>
    <string name="book_fprice_xtra">bookFinalPrice</string>
    <string name="voucher_xtra">vCoupon</string>
    <string name="game_fprice_xtra">gameFinalPrice</string>
    <string name="movie_fprice_xtra">movieFinalPrice</string>
    <string name="game_coverimg_xtra">coverImg</string>
    <string name="game_smallimg_xtra">smallImg</string>
    <string name="game_title_xtra">title</string>
    <string name="game_plot_xtra">plot</string>
    <string name="game_date_xtra">date</string>
    <string name="game_mode_xtra">mode</string>
    <string name="game_dev_xtra">dev</string>
    <string name="game_platform_xtra">platform</string>
    <string name="game_price_xtra">price</string>
    <string name="game_releasetxt_xtra">Release Date:</string>
    <string name="game_modetxt_xtra">Modes:</string>
    <string name="game_devtxt_xtra">Developers:</string>
    <string name="game_platformtxt_xtra">Platforms:</string>
    <string name="mov_coverimg_xtra">movieCoverImg</string>
    <string name="mov_plot_xtra">moviePlot</string>
    <string name="mov_price_xtra">moviePrice</string>
    <string name="mov_smallimg_xtra">movieSmallImg</string>
    <string name="mov_title_xtra">movieTitle</string>
    <string name="action_update">android.appwidget.action.APPWIDGET_UPDATE</string>
    <string name="game_xtra">game</string>
    <string name="movie_xtra">movie</string>
    <string name="book_xtra">book</string>
    <string name="suntotal_xtra">subTotal</string>
    <string name="discount_xtra">discount</string>
    <string name="grand_xtra">grand</string>
    <string name="cartlist_key">cartList</string>
    <string name="games_tab">Games</string>
    <string name="movies_tab">Movies</string>
    <string name="books_tab">Books</string>


</resources>
