<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/headerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/popframelay_height"
        android:background="@drawable/half_rounded_edge"
        android:elevation="@dimen/popframelay_elev"
        android:foregroundGravity="top">

        <TextView
            android:id="@+id/popupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingTop="@dimen/poptitle_padding_top"
            android:text="@string/pop_purchasing_info"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/poptitle_txt_size" />

    </RelativeLayout>


    <TextView
        android:id="@+id/qtyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_marginTop="@dimen/popqtytxt_margin_top"
        android:layout_toStartOf="@+id/quantity"
        android:fontFamily="sans-serif-thin"
        android:text="@string/pop_qty_txt"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/popqtytxt_txt_size" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="@dimen/popqty_width"
        android:layout_height="@dimen/popqty_height"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/popqty_margin_top"
        android:background="@drawable/rounded_edge"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/popqty_num"/>

    <TextView
        android:id="@+id/voucherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/qtyText"
        android:layout_below="@+id/quantity"
        android:layout_marginTop="@dimen/popvoutxt_margin_top"
        android:fontFamily="sans-serif-thin"
        android:text="@string/pop_voucher_txt"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/popvoutxt_txt_size" />


    <EditText
        android:id="@+id/voucher"
        android:layout_width="@dimen/popvou_width"
        android:layout_height="@dimen/popvou_height"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/popvou_margin_bottom"
        android:layout_marginTop="@dimen/popvou_margin_top"
        android:background="@drawable/rounded_edge"
        android:gravity="center"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/popproceed_margin_top"
        android:drawableRight="@drawable/done_icon"
        android:fontFamily="sans-serif-regular"
        android:paddingBottom="@dimen/popproceed_padding_bottom"
        android:paddingRight="@dimen/popproceed_padding_right"
        android:text="@string/pop_proceed"
        android:textColor="@color/colorPrimaryDark" />


</RelativeLayout>