<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.bahaa.marketa.SplashScreen">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/splashapplogo_margin_top"
        android:elevation="@dimen/splashapplogo_elev"
        android:scaleType="centerCrop"
        android:src="@drawable/marketa_logo"
        android:contentDescription="@string/logo_image"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/splashappname_margin_top"
        android:fontFamily="sans-serif"
        android:text="@string/splash_app_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/splashapplogo_txt_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/splashbanner_margin_top"
        android:fontFamily="sans-serif-thin"
        android:text="@string/splashbanner_txt"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/splashbanner_txt_size" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="@dimen/progbar_width"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/progbar_margin_top"
        android:backgroundTint="@color/colorPrimaryDark"
        android:progressBackgroundTint="@color/colorPrimaryLight"
        android:progressTint="@color/colorPrimaryLight" />

</RelativeLayout>
