<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_activity_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingEnd="@dimen/log_lay_padding_right"
        android:paddingStart="@dimen/log_lay_padding_left">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLay"
            android:layout_width="@dimen/email_width"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/email_margin_top"
            android:gravity="center"
            android:textColorHint="@color/colorWhite">

            <EditText
                android:id="@+id/loginMail"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/loginmail_margin_top"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_mail"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passLay"
            android:layout_width="@dimen/passlay_width"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/emailLay"
            android:layout_alignTop="@+id/emailLay"
            android:layout_marginTop="@dimen/passlay_margin_top"
            android:gravity="center"
            android:textColorHint="@color/colorWhite">

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="@dimen/loginpass_width"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/loginMail"
                android:layout_alignTop="@+id/loginMail"
                android:layout_marginTop="@dimen/loginpass_margin_top"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_lock"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>


        <FrameLayout
            android:id="@+id/buttonFrame"
            android:layout_width="@dimen/btnframe_width"
            android:layout_height="match_parent"
            android:layout_above="@+id/forgotPassText"
            android:layout_alignStart="@+id/login"
            android:layout_alignTop="@+id/login"
            android:background="@drawable/login_button"
            android:orientation="vertical">

        </FrameLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="@dimen/btnframe_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passLay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgotPassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/forgot_margin_top"
            android:text="@string/ForgPass"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPassText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/signtxt_margin_top"
            android:text="@string/signUp"
            android:textColor="@color/colorAccent" />


    </RelativeLayout>
</ScrollView>