<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="com.example.bahaaibrahim.tasteria.signUpFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/join_margin_start"
            android:layout_marginTop="@dimen/join_margin_top"
            android:fontFamily="serif"
            android:text="@string/join"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/join_txt_size" />

        <TextView
            android:id="@+id/alreadyMem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/join"
            android:layout_below="@+id/join"
            android:text="@string/alreadyMem"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/alreadymem_txt_size" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userNameLay"
            android:layout_width="@dimen/userlay_width"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/signMailLay"
            android:layout_below="@+id/alreadyMem"
            android:layout_marginTop="@dimen/userlay_margin_top"
            android:gravity="center"
            android:textColorHint="@color/colorWhite">

            <EditText
                android:id="@+id/userName"
                android:layout_width="@dimen/username_width"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/signMail"
                android:layout_below="@+id/alreadyMem"
                android:layout_marginTop="@dimen/username_margin_top"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_user"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/userName"
                android:inputType="text"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signMailLay"
            android:layout_width="@dimen/signlay_width"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/buttonFrame"
            android:layout_below="@+id/userNameLay"
            android:layout_marginTop="@dimen/signlay_margin_top"
            android:gravity="center"
            android:textColorHint="@color/colorWhite">

            <EditText
                android:id="@+id/signMail"
                android:layout_width="@dimen/signmail_width"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/buttonFrame"
                android:layout_below="@+id/userNameLay"
                android:layout_marginTop="@dimen/signmail_margin_top"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_mail"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signPassLay"
            android:layout_width="@dimen/psaslay_width"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/signMailLay"
            android:layout_below="@+id/signMailLay"
            android:layout_marginTop="@dimen/psaslay_margin_top"
            android:gravity="center"
            android:textColorHint="@color/colorWhite">


            <EditText
                android:id="@+id/signPass"
                android:layout_width="@dimen/sinpass_width"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/signMailLay"
                android:layout_below="@+id/signMailLay"
                android:layout_marginTop="@dimen/sinpass_margin_top"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_lock"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/signPass"
                android:inputType="textPassword"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>




        <FrameLayout
            android:id="@+id/buttonFrame"
            android:layout_width="@dimen/btnframe_sign_width"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/signUpButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/btnframe_sign_margin_top"
            android:background="@drawable/login_button"
            android:foregroundGravity="center"
            android:orientation="vertical">

        </FrameLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="@dimen/signbtn_width"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/buttonFrame"
            android:layout_marginTop="@dimen/signbtn_margin_top"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/signUpButton"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />


    </RelativeLayout>
</ScrollView>