<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/movie_bkg"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:id="@+id/movieDetailsCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mov_detcard_width"
            android:layout_marginStart="@dimen/mov_detcard_margin_left"
            android:layout_marginEnd="@dimen/mov_detcard_margin_right"
            android:alpha="0.8"
            android:elevation="@dimen/mov_detcard_elev"
            card_view:cardCornerRadius="@dimen/mov_detcard_border_rad">

            <RelativeLayout
                android:id="@+id/relLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/movieDetCoverImg"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mov_detcardimg_height"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/transition_name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mov_spacebar_height"
                    android:alpha="0.3"
                    android:background="@color/colorBlack" />

                <TextView
                    android:id="@+id/movieTxtPlot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/movplottxt_margin_left"
                    android:layout_marginTop="@dimen/movplottxt_margin_top"
                    android:fontFamily="sans-serif"
                    android:maxLines="1"
                    android:text="@string/movie_plot"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/movplottxt_txt_size"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/moviePlot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/movplot_margin_left"
                    android:layout_marginTop="@dimen/movplot_margin_top"
                    android:fontFamily="sans-serif-light"
                    android:paddingEnd="@dimen/movplot_padding_right"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="@dimen/movplot_txt_size" />


                <TextView
                    android:id="@+id/movieCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:drawableEnd="@drawable/cart_icon"
                    android:fontFamily="sans-serif-regular"
                    android:paddingBottom="@dimen/movcart_padding_bottom"
                    android:paddingEnd="@dimen/movcart_padding_right"
                    android:text="@string/add_movie_to_cart"
                    android:textColor="@color/colorPrimary" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>