<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.bahaa.marketa.Checkout.CheckoutActivity">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/updateRefresher"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/checkoutRV"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chkout_rv_height"
                android:scrollbars="vertical" />

        </android.support.v4.widget.SwipeRefreshLayout>


        <TextView
            android:id="@+id/subTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/subtotal_margin_left"
            android:layout_marginTop="@dimen/subtotal_margin_top"
            android:fontFamily="sans-serif-medium"
            android:text="@string/subtotal"
            android:textSize="@dimen/subtotal_txt_size" />

        <TextView
            android:id="@+id/subPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/subprice_margin_left"
            android:layout_marginTop="@dimen/subprice_margin_top"
            android:fontFamily="sans-serif"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/discount_margin_left"
            android:layout_marginTop="@dimen/discount_margin_top"
            android:fontFamily="sans-serif-medium"
            android:text="@string/discount"
            android:textSize="@dimen/discount_txt_size" />

        <TextView
            android:id="@+id/disPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/disprice_margin_left"
            android:layout_marginTop="@dimen/disprice_margin_top"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/disprice_txt_size" />

        <View
            android:id="@+id/spaceBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacebar_height"
            android:layout_marginLeft="@dimen/spacebar_margin_left"
            android:layout_marginRight="@dimen/spacebar_margin_right"
            android:layout_marginTop="@dimen/spacebar_margin_top"
            android:alpha="0.3"
            android:background="@color/colorPrimaryLight" />

        <TextView
            android:id="@+id/grandTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/grandtotal_margin_left"
            android:layout_marginTop="@dimen/grandtotal_margin_top"
            android:fontFamily="sans-serif-medium"
            android:text="@string/grand_total"
            android:textSize="@dimen/grandtotal_txt_size" />

        <TextView
            android:id="@+id/grandTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/grandprice_margin_left"
            android:layout_marginTop="@dimen/grandprice_margin_top"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/grandprice_txt_size" />


        <Button
            android:id="@+id/orderBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/orderbtn_margin_bottom"
            android:background="@drawable/ripple_effect"
            android:elevation="@dimen/orderbtn_elev"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/order_now"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/orderbtn_txt_size" />


    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
